# schemars

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: CD.yml  CI.yml
bench/: _drf.py  _marshmallow.py  _schemars.py  requirements.txt  run.py
examples/django_example/: Dockerfile  db.sqlite3  docker-compose.yml  requirements.txt
examples/django_example/django_example/: settings.py  urls.py
examples/django_example/products/: admin.py  models.py  schema.py  urls.py  views.py
examples/django_example/products/migrations/: 0001_initial.py
schemars/: __init__.py  _schemars.pyi
src/: errors.rs  lib.rs  macros.rs  schema.rs
src/fields/: any.rs  base.rs  bool.rs  bytes.rs  date.rs  datetime.rs  decimal.rs  dict.rs  float.rs  int.rs  list.rs  method.rs  mod.rs  str.rs  union.rs  uuid.rs
tests/: test_any_field.py  test_bool_field.py  test_bytes_field.py  test_date_field.py  test_datetime_field.py  test_decimal_field.py  test_dict_field.py  test_float_field.py  test_int_field.py  test_list_field.py  test_method_field.py  test_schema.py  test_str_field.py  test_union_field.py  test_uuid_field.py
