[package]
name = "schemars"
version = "0.4.0"
edition = "2021"

[lib]
name = "schemars"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
speedate = "0.13.0"
rust_decimal = "1.32.0"
uuid = "1.6.1"
mimalloc = { version = "0.1.34", optional = true, default-features = false, features = ["local_dynamic_tls"] }

[features]
extension-module = ["pyo3/extension-module"]
default = ["mimalloc"]

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"
strip = true

[dev-dependencies]
pyo3 = { version = "0.20.0", features = ["auto-initialize"] }

[build-dependencies]
version_check = "0.9.4"
pyo3-build-config = { version = "0.20.0" }